--- a/snippets/product-card-badges.liquid
+++ b/snippets/product-card-badges.liquid
@@ -68,6 +68,7 @@
     font-weight: var(--badge-font-weight);
     text-transform: var(--badge-text-transform);
     border-radius: var(--badge-border-radius);
+    border: 1px dashed var(--color-foreground);
   }
 
   .product-badges__badge--rectangle {
