--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -780,6 +780,10 @@
           "label": "12px"
         },
         {
+          "value": "0.8125rem",
+          "label": "13px"
+        },
+        {
           "value": "0.875rem",
           "label": "14px"
         },
