--- a/snippets/button.liquid
+++ b/snippets/button.liquid
@@ -17,6 +17,7 @@
   {% endif %}
   class="
     size-style
+    rotate-on-hover
     {{ block.settings.style_class }}
     {{ block.settings.style_class }}--{{ block.id }}
   "
