--- a/assets/base.css
+++ b/assets/base.css
@@ -1271,7 +1271,7 @@ button.shopify-payment-button__button--unbranded {
   --button-border-width: var(--style-border-width-primary);
 }
 
-button:hover:not(.add-to-cart-button):not(.button-unstyled):not(.shopify-payment-button__button--unbranded) {
+button.rotate-on-hover:hover {
     transform: rotate(-8deg);
     transition: transform var(--animation-speed) var(--animation-easing);
     transform-origin: center center;
