Add Back in Stock notification feature with AJAX form handling

--- a/blocks/_product-details.liquid
+++ b/blocks/_product-details.liquid
@@ -111,6 +111,9 @@
       "type": "buy-buttons"
     },
     {
+      "type": "back-in-stock"
+    },
+    {
       "type": "product-description"
     },
     {
