--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -58,6 +58,9 @@
     <script src="{{ 'critical.js' | asset_url }}"></script>
     {% # theme-check-enable ParserBlockingScript %}
 
+    {%- comment -%} Back in Stock notification system {%- endcomment -%}
+    <script src="{{ 'back-in-stock.js' | asset_url }}" defer></script>
+
     {% render 'search-modal' %}
 
     {% if settings.quick_add or settings.mobile_quick_add %}
